--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ body {
   font-weight: bold;
   color: #1a5276;
   text-align: left;
+  align-self: center;
 }
 
 /* 中間的內文 */
@@ -301,6 +302,7 @@ footer {
   margin: 0 auto;
 
 }
+
 
 
 
